<?xml version="1.0"?>
<package format="3">
  <name>car</name>
  <version>1.0.0</version>
  <description>The car control package (ROS2 version)</description>

  <maintainer email="vadimrm01@gmail.com">Nagib Robotics</maintainer>


  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
  </package>
