<?xml version="1.0"?>
<package format="3">
  <name>car_msgs</name>
  <version>0.0.1</version>
  <description>Messages for the car package (ROS1 version)</description>
<maintainer email="vadimrm01@gmail.com">Nagib Robotics</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
